--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         </ul>
     <h3>Projects</h3>
         <ul>
-            <li><a href="#">bioSite Project Home Page</a></li>
+            <li><a href="https://github.com/harliehall/bioSite">bioSite Project Home Page</a></li>
             <li><a href="#">Final Exam</a></li>
         </ul>
     <h4>Important Links</h4>
