--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <h3>Projects</h3>
         <ul>
             <li><a href="https://github.com/harliehall/bioSite">bioSite Project Home Page</a></li>
-            <li><a href="#">Final Exam</a></li>
+            <li><a href="module-12/Hall_Final.html">Final Exam</a></li>
         </ul>
     <h4>Important Links</h4>
         <ul>
