--- a/module-12/Hall_Final.html
+++ b/module-12/Hall_Final.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <link rel="stylesheet" type="text/css" href="Hall_Final.css">
     <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@300;400;500;700&display=swap" rel="stylesheet">
-    <title>CSD 340 Web Development with HTML and CSS</title>
+    <title>Harlie Hall Final Project (CSD-340)</title>
 </head>
     
 
@@ -81,7 +81,7 @@
     
     <div class="contact-container">
     <div class="card full-width">
-            <div id="Contact" class="card-title">Contact Form</div>
+            <div id="Form" class="card-title">Contact Form</div>
             <div class="card-content">
                 <div class="form">
                     <div class="form-field">
